--- a/package.json
+++ b/package.json
@@ -2,13 +2,32 @@
   "name": "arxiv-summarize-bot",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "build/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ts-node src/main.ts",
+    "start": "node build/main.js",
+    "compile": "tsc -p ."
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@types/node-cron": "^3.0.7",
+    "axios": "^1.4.0",
+    "discord.js": "^14.11.0",
+    "dotenv": "^16.1.3",
+    "node-cron": "^3.0.2",
+    "openai": "^3.2.1",
+    "xml-js": "^1.6.11"
+  },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "eslint": "^8.42.0",
+    "eslint-config-standard-with-typescript": "^35.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.1.3"
   }
 }
