--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
+    "@types/node": "^20.3.2",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "eslint": "^8.42.0",
     "eslint-config-standard-with-typescript": "^35.0.0",
